--- a/workspace/style.css
+++ b/workspace/style.css
@@ -1,3 +1,87 @@
-body{
-    font-family: Arial, Helvetica, sans-serif;
+body {
+    font-family: "Montserrat", sans-serif;
+    font-optical-sizing: auto;
+    color: black;
+    width: 60vw;
+  }
+
+button {
+    font-family: "Montserrat", sans-serif;
+}
+
+body {
+    margin: 20px auto;
+    padding: 20px;
+    background-color: #f5f5f5; /* Light background color for light mode */
+}
+
+h1 {
+    text-align: center;
+}
+
+#balance {
+    color: #2ecc71; /* Green color for balance in light mode */
+}
+
+#adjust_balance,
+#add_transaction,
+.dlt_trans {
+    background-color: #3498db;
+    color: #fff;
+    padding: 10px;
+    margin-top: 10px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+#adjust_balance:hover,
+#add_transaction:hover,
+.dlt_trans:hover {
+    background-color: #2980b9; /* Slightly darker blue on hover */
+}
+
+label {
+    display: block;
+    margin-top: 15px;
+    color: #3498db; /* Blue color for labels in light mode */
+}
+
+input,
+select {
+    width: 100%;
+    padding: 10px;
+    margin-top: 5px;
+    box-sizing: border-box;
+}
+
+#transactions {
+    margin-top: 20px;
+}
+
+.transaction {
+    background-color: #fff; /* White background color for transactions */
+    padding: 15px;
+    margin-bottom: 10px;
+    border: 1px solid #ddd; /* Light border color */
+    border-radius: 5px;
+}
+
+.amount {
+    color: #3498db;
+    cursor: pointer;
+}
+
+.red {
+    background-color: #F6D6D6;
+    padding: 10px;
+    border-radius: 10px;
+    margin-bottom: 20px;
+}
+
+.green{
+    background-color: #A1EEBD;
+    padding: 10px;
+    border-radius: 10px;
+    margin-bottom: 20px;
 }
